Added caching to vedur.is API calls + (a lot) comments to full project